Change the strucutre to Vector and implement Add and Remove functions