@@ -1,36 +1,36 @@
 package data;
 
-import java.util.LinkedList;
+import java.util.Vector;
 
 public class SynchronizedPriorityQueue<E extends Comparable<? super E>> {
-    private LinkedList<Element<E>> queue;
+    private Vector<Element<E>> queue;
 
     public SynchronizedPriorityQueue() {
-        this.queue = new LinkedList<>();
+        this.queue = new Vector<>();
     }
+
+    public SynchronizedPriorityQueue(int capacity) { this.queue = new Vector<>(capacity); }
 
     /**
      * Add a new element to the queue.
-     * The queue is ordered decreasingly.
-     * Complexity: O(log n) - a binary search is used to determine the position and the element
-     * is inserted on the determined index.
+     * The queue behaves like a max heap so the root will be the element with the highest priority.
+     * Complexity: O(log n) - because of the moveUp functions
      *
      * @param content the content
      * @param priority the priority of the content
      */
     public void add(E content, int priority) {
         Element<E> element = new Element<>(content, priority);
+        queue.addElement(element);
 
-        // use the findIndex function to determine where the element should be inserted
-        int index = findIndex(priority);
-        queue.add(index, element);
+        int index = queue.size() - 1;
+        moveUp(index);
     }
 
     /**
      * Removes the element with the highest priority and returns it.
-     * Complexity: O(1)
-     * As the underlying data structure is a linked list the first element can be removed
-     * with a complexity of O(1).
+     * The element with the highest priority is the last root of the array.
+     * Complexity: O(log n) - because of the moveDown function
      *
      * @return the element with highest priority
      */
@@ -39,7 +39,12 @@ public class SynchronizedPriorityQueue<E extends Comparable<? super E>> {
             return null;
         }
 
-        return queue.removeFirst().getContent();
+        Element<E> removedElement = queue.firstElement();
+        queue.setElementAt(queue.lastElement(), 0);
+        queue.remove(size() - 1);
+        moveDown(0);
+
+        return removedElement.getContent();
     }
 
     /**
@@ -51,8 +56,6 @@ public class SynchronizedPriorityQueue<E extends Comparable<? super E>> {
      * @param priority the new priority
      */
     public synchronized boolean update(E element, int priority) {
-        int searchedIndex = findIndex(priority);
-//        this.queue.re
 
         return false;
     }
@@ -65,41 +68,93 @@ public class SynchronizedPriorityQueue<E extends Comparable<? super E>> {
         return queue.size();
     }
 
+    // ---- HELPER FUNCTIONS ----
+
     /**
-     * Function to determine the index where the element with the input priority should be inserted.
-     * Complexity: - O(1) if the queue is empty or the element will be inserted on the first/last position
-     *             - O(log n) otherwise because a binary search algorithm is used to find the index
-     *
-     * @param priority - the input priority
-     * @return the index where the element should be inserted
+     * @param index - the current index
+     * @return the root of queue.get(index)
      */
-    private int findIndex(int priority) {
-        // if the queue is empty or the priority of the first element is smaller than the
-        // input priority, then the searched index is 0
-        if (queue.size() == 0 || queue.peekFirst().getPriority() < priority) {
+    private int root(int index) {
+        if (index == 0) {
+            // i is already a root
             return 0;
         }
 
-        // if the priority of the last element of the queue is higher or equal to than the input
-        // priority, then the searched index is the size of the queue
-        if (queue.peekLast().getPriority() >= priority) {
-            return queue.size();
-        }
-
-        int left = 0;
-        int right = queue.size() - 1;
-
-        while (left < right) {
-            int middle = left + (right - left) / 2;
-            if (priority <= queue.get(middle).getPriority()) {
-                left = middle + 1;
-            } else {
-                right = middle;
-            }
-        }
-
-        return left;
+        return (index - 1) / 2;
     }
 
+    /**
+     * @param index - the current index
+     * @return the left child of queue.get(index)
+     */
+    private int getLeft(int index) {
+        return (2 * index) + 1;
+    }
+
+    /**
+     * @param index - the current index
+     * @return the right child of queue.get(index)
+     */
+    private int getRight(int index) {
+        return (2 * index) + 2;
+    }
+
+    /**
+     * Swap the values of the two indexes
+     * @param index1 - the first index
+     * @param index2 - the second index
+     *
+     * Complexity: O(1) because it directly access the resources using indexes.
+     */
+    private void swap(int index1, int index2) {
+        Element<E> aux = queue.get(index1);
+        queue.setElementAt(queue.get(index2), index1);
+        queue.setElementAt(aux, index2);
+    }
+
+    /**
+     * Checks if the priority of the element at index is greater than the  priority of the element
+     * from the current root and if it is it swaps them
+     * @param index - the current index
+     *
+     * Complexity: O(log n) - because the function will be called only on the roots of the subtrees
+     *      in a max heap
+     */
+    private void moveUp(int index) {
+        if (index > 0 && queue.get(root(index)).getPriority() < queue.get(index).getPriority()) {
+            swap(index, root(index));
+            moveUp(root(index));
+        }
+    }
+
+    /**
+     * Check if the priority of the element at index is smaller than the priorities of elements
+     * from its children and if it is it swaps it with the child having the greater priority
+     * @param index
+     *
+     * Complexity: O(log n) - because the function will be called only if the root of a subtree
+     *      will have the priority smaller than one of the children. The queue is already ordered
+     *      as a max heap so only a few changes will be made.
+     */
+    private void moveDown(int index) {
+        // get the children of the index
+        int left = getLeft(index);
+        int right = getRight(index);
+
+        int greater = index;
+
+        if (left < size() && queue.get(left).getPriority() > queue.get(index).getPriority()) {
+            greater = left;
+        }
+
+        if (right < size() && queue.get(right).getPriority() > queue.get(greater).getPriority()) {
+            greater = right;
+        }
+
+        if (greater != index) {
+            swap(index, greater);
+            moveDown(greater);
+        }
+    }
 }
 
